Bug 461155 - "Keep the selection and clipboard the same" only works if "Text selection: Always save in history" is also active
Summary: "Keep the selection and clipboard the same" only works if "Text selection: Al...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, usability
: 461947 483422 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-29 12:02 UTC by Patrick Silva
Modified: 2024-06-27 14:28 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-29 12:02:56 UTC
STEPS TO REPRODUCE
1. enable 'Enable Keep the selection and clipboard the same' in clicpboard settings
2. select text with mouse - I selected text in Kate
3. 

OBSERVED RESULT
selected text does not appear in the history of Clipboard applet and nothing is pasted if I press ctrl+v.

EXPECTED RESULT
'Enable Keep the selection and clipboard the same'  should work.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-10-31 22:53:33 UTC
Let me guess: you have "only when explicitly copied" checked? Does it start working like you expect if you instead check "Always save in history"?

If so, I think the "only when explicitly copied" setting is broken and actually controls synchronization, not whether the synchronized text is added to the clipboard history.
Comment 2 Patrick Silva 2022-11-02 12:36:51 UTC
(In reply to Nate Graham from comment #1)
> Does it start working like you expect if you instead check "Always save in history"?

Yes. I can't even paste a selected text with ctrl+v if 'Only when explicitly copied' is selected.
Comment 3 Nate Graham 2022-11-29 19:34:19 UTC
*** Bug 461947 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2024-04-11 02:44:40 UTC
*** Bug 483422 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2024-06-25 07:46:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4483
Comment 6 Bug Janitor Service 2024-06-25 07:46:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4483
Comment 7 Fushan Wen 2024-06-25 16:18:17 UTC
Can also reproduce on X11 now
Comment 8 Marco Martin 2024-06-27 10:55:37 UTC
Git commit d5cf7ef122647f5f1c1eadc000bc2a9f277fd26e by Marco Martin, on behalf of Fushan Wen.
Committed on 27/06/2024 at 10:37.
Pushed by fusionfuture into branch 'master'.

klipper: explicitly sync clipboard with selection with `IgnoreSelection` enabled

When `SyncClipboards` is true but `IgnoreSelection` is true, the
clipboard should still sync clipboard and selection. However,
this is not done automatically, so Klipper still needs to do
it manually.
FIXED-IN: 6.2

M  +32   -10   appiumtests/applets/clipboardtest.py
M  +16   -29   klipper/klipper.cpp
M  +0    -16   klipper/klipper.h
M  +32   -3    klipper/systemclipboard.cpp
M  +18   -1    klipper/systemclipboard.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/d5cf7ef122647f5f1c1eadc000bc2a9f277fd26e