klipper: explicitly sync clipboard with selection with `IgnoreSelection` enabled

When `SyncClipboards` is true but `IgnoreSelection` is true, the
clipboard should still sync clipboard and selection. However,
this is not done automatically, so Klipper still needs to do
it manually.

BUG: 461155
FIXED-IN: 6.2